<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.liyang.lucene_ly.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search1"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/appname"
            android:textStyle="italic"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/data_dir"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="bold"
        android:hint="@string/data_dir_hint"/>

    <Button
        android:id="@+id/dir_select"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/btn_bg_red"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/select_data_dir"
        android:textSize="10dp"
        android:textStyle="italic"
        android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/index_dir"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="bold"
        android:hint="@string/index_dir_hint"/>

    <Button
        android:id="@+id/index_select"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/btn_bg_red"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="10dp"
        android:text="@string/select_index_dir"
        android:textStyle="italic"
        android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/createIndex"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/createIndex"
            android:layout_gravity="center"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg_red"/>

    </LinearLayout>
</LinearLayout>
